Add `stellar.configuration.mutator` (see details)
- Create dependency-free `stellar.configuration.mutator` which uses the
  same reflection logic as previous `stellar.configuration.testing`,
  but without any dependency (using `Class.forName` instead)

- `stellar.configuration.testing` is now a completely empty project,
  to be turned into a library for application testing using the
  `stellar.lifecycle.testing` composite (mainly JUnit) instead.

- Make all official configuration extensions use the new mutator
  module for testing

- Move all `stellar.configuration` tests back into the main module,
  and make the main module depend on `stellar.configuration.mutator`
  (which gets built first, so no cyclic dependency)

Signed-off-by: Mahied Maruf <contact@mechite.com>